Fix broken editor preview scrolling on mobile
No issue

Scrolling the rendered markdown on mobile was broken, because the z-index stack meant (for some reason) that the inactive layer was on top of the other, but invisible. Hiding the inactive with display: none; solves this.

--- a/sass/layouts/editor.scss
+++ b/sass/layouts/editor.scss
@@ -169,6 +169,19 @@
 
     } // .entry-markdown, .entry-preview
 
+    @media (max-width: 1000px) {
+
+        .entry-markdown .entry-markdown-content,
+        .entry-preview .entry-preview-content {
+            display: none;
+        }
+        .entry-markdown.active .entry-markdown-content,
+        .entry-preview.active .entry-preview-content {
+            display: block;
+        }
+
+    } // @media (max-width: 1000px)
+
     .entry-markdown-content {
 
         textarea {
